# blog_code

./: .gitignore  .gitleaks.toml  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  claude_context_guide.md  package.json  pyproject.toml  requirements.txt
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
03_build-pyspark-local-environment/: pyspark_test.py  test.csv
06_character_precision_and_lpad/: character_precision_sample.csv  lpad_sample.csv
10_api_gateway_rest_lambda_serverless_framework/: .gitignore  README.md  lambda_function.py  serverless.yml
11_s3_replication/: README.md  hoge.yml  s3.yml  s3_same_region_replication_role.yml
12_5_lambda_s3_file_check/: lambda_function.py  serverless.yml
12_s3_object_existence/: README.md  lambda_function.py  serverless.yml
12_s3_object_transfer/: README.md  handler.py  lambda_role.yml  serverless.yml
13_s3_file_transfer/: README.md  example.json  lambda_function.py  serverless.yml
14_python_loggger_implement/: main.py
15_s3_bucket_only_group_and_role/: README.md  cm_kasama_iam_user_groups.yaml  cm_kasama_restrict_role.yaml  cm_kasama_restrict_s3.yaml
20_azure_computer_vision/: README.md  main.py  output.txt
22_image_to_excel/: README.md  image_to_excel.py  test_evidence.xlsx  ~$test_evidence.xlsx
23_shell_script_with_json_escape/: README.md  handler.py  run_lambda.sh  serverless.yml
24_iics_mapping_task_current_date_parameter/: README.md
26_iics_csv/: memo.sql
27_gpt_4_vision_preview/: README.md  file_image.py  url_image.py
29_gpt_4_vision_preview_with_streamlit/: README.md  merge.py  requirements.txt  test.py  tmp.py
30_create_redshift_ddls/: README.md  main.py  requirements.txt  want_to.sql
31_paho_mqtt_pytest_mocking/: README.md  main.py  pyproject.toml
31_paho_mqtt_pytest_mocking/tests/: conftest.py  test_main.py
32_windows_instance_cfn/: README.md  cloudwatch_agent_config.json  health_resource_check_alarm.yml  health_resource_check_role.yml  health_resource_check_sns.yml  windows_ec2.yml
33_bucket_access_best_practice/: cm_kasama_practice_account_a_role.yaml  cm_kasama_practice_account_b_role.yaml  cm_kasama_practice_account_b_s3.yaml
41_lambda_logging_json_with_cdk/: README.md
42_create_minutes_app/: README.md  create_minutes.py  lambda_handler.py  pyproject.toml
42_create_minutes_app/input/: prompt.md
42_create_minutes_app/tmp/: BS部ナレッジ共有会_2025_02_18 12_51_JST_Recording.txt  bsーdataengineering-foundamental.txt
46_openai_realtime_translate/: README.md  main.py  pyproject.toml
68_claude_code_tts_hook/hooks/kokoro-tts/: pyproject.toml
69_claude_code_english_setup/hooks/kokoro-tts/: pyproject.toml
(+422 files in other folders)
