[project]
name = "46-create-minutes-realtime"
version = "0.1.0"
description = ""
authors = [
    {name = "cm-yoshikikasama"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "textual",
    "numpy>=1.26.0",
    "pyaudio",
    "pydub",
    "sounddevice",
    "openai[realtime]",
    "python-dotenv (>=1.0.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
