[project]
name = "kokoro-tts"
version = "0.2.0"
description = "Kokoro TTS via mlx-audio for Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "mlx-audio>=0.4.1",
    "misaki[en]==0.7.4",
    "soundfile>=0.13.1",
    "num2words",
    "spacy",
    "phonemizer",
    "espeakng-loader",
    "pip",
    "uvicorn",
    "fastapi",
    "webrtcvad",
    "setuptools<82",
    "python-multipart",
]
